--- a/clase3/formulario.html
+++ b/clase3/formulario.html
@@ -13,7 +13,7 @@
 </html>
 
 <div class="formulario">
-    <div class="preguntas">
+    <div class="preguntas centro">
     <form action="" method="">
         <p>
             <label for="nom">Nombre</label><br>
