--- a/clase3/index.html
+++ b/clase3/index.html
@@ -9,34 +9,34 @@
     <title>CV de Pinto Ezequiel</title>
 </head>
 <body>
-    <header>
+    <header class="container ">
     <div class="cabeza centro">
-        <div class="columna">
+        <div>
         <h1 class="name">EZEQUIEL PINTO</h1>
         <img src="imagenes_cv/Foto.jpeg" class="foto">
         </div>
     </div>
     </header>
     
-    <main>
+    <main class="container">
         <div class="centro">
             <div class="columna">
             <h2 class="underline">Edad:</h2>
-            <p>26 Años</p>
+            <p class="bold">26 Años</p>
             </div>
         </div>
 
         <div class="centro">
             <div class="columna">
             <h2 class="underline">Domicilio:</h2>
-            <p>Dean Funes 1239 Piso 8</p>
+            <p class="bold">Dean Funes 1239 Piso 8</p>
             </div>
         </div>
 
         <div class="centro">
             <div class="columna">
             <h3 class="underline">Que series me gustan?</h3>
-            <ul>
+            <ul class="bold">
                 <li>Las series de Marvel</li>
                 <li>One Piece</li>
                 <li>The Big Bang Theory</li>
@@ -49,7 +49,7 @@
         <div class="centro">
             <div class="columna">
             <h3 class="underline">Que pelis son las que mas me gustaron?</h3>
-            <ol>
+            <ol class="bold">
                 <li>Todas las peliculas de Marvel</li>
                 <li>Alita</li>
                 <li>Las peliculas de Resident Evil</li>
@@ -62,8 +62,8 @@
         <div class="centro">
             <div class="columna">
             <h3 class="underline">Perfil</h3>
-            <p>Soy Tec. en Hemoterapia y estoy estudiando Ing. en Sistemas como segunda carrera</p>
-            <p>Me gusta mucho todo lo relaciona con la informatica; y este año decidi anotarme en <br> 
+            <p class="bold">Soy Tec. en Hemoterapia y estoy estudiando Ing. en Sistemas como segunda carrera</p>
+            <p class="bold">Me gusta mucho todo lo relaciona con la informatica; y este año decidi anotarme en <br> 
             en una diplomatura de desarrollo web para extender mis conocimientos</p>
             </div>
         </div>
