actualizacion modulo2 unidad1

--- a/clase3/index-cv.html
+++ b/clase3/index-cv.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--===========================CSS========================================-->
     <link rel="stylesheet" href="estilo.css">
     <title>CV de Pinto Ezequiel</title>
@@ -21,7 +19,7 @@
 
     <div class="info">
         <div class="titulo">
-            <div class="logo"><i class="fas fa-user"></i></div>
+            <div class="logo"></div>
             <h2 class="h2-title">PERFIL</h2>
         </div>
         <div class="contenido-info">
@@ -37,7 +35,7 @@
 
     <div class="contacto">
         <div class="titulo">
-            <div class="logo"><i class="fas fa-phone"></i></div>
+            <div class="logo"></div>
             <h2 class="h2-title">CONTACTO</h2>
         </div>
         <div class="contenido-contacto">
@@ -64,21 +62,28 @@
     <main class="container">
         <div class="centro">
             <div class="columna">
-            <h2 class="underline">Edad:</h2>
-            <p class="bold">26 Años</p>
+            <h2 class="title">FORMACION</h2>
+            <ul class="bold">
+                <li>ENS Nº “Mariano Acosta” <h6 class="clarito">/ENE 2009 - DIC 2013</h6></li>
+                <li>Universidad Tecnológica Nacional <h6 class="clarito">/AGO 2021 – En Curso</h6></li>
+            </ul>
             </div>
         </div>
 
         <div class="centro">
             <div class="columna">
-            <h2 class="underline">Domicilio:</h2>
-            <p class="bold">Dean Funes 1239 Piso 8</p>
+            <h2 class="title">EXPERIENCIA</h2>
+            <ul class="bold">
+                <li>Ayudante de Técnico electricista <h6 class="clarito">/ENE 2014 - ENE 2017</h6></li>
+                <li>Reparación y armado de PC <h6 class="clarito">/ENE 2009 – PRESENTE</h6></li>
+                <li>Atención al cliente: Soporte Técnico <h6 class="clarito">/ JUL 2020 – PRESENTE</h6></li>
+            </ul>
             </div>
         </div>
 
         <div class="centro">
             <div class="columna">
-            <h3 class="underline">Que series me gustan?</h3>
+            <h3 class="title">SEMINARIOS</h3>
             <ul class="bold">
                 <li>Las series de Marvel</li>
                 <li>One Piece</li>
@@ -91,7 +96,7 @@
 
         <div class="centro">
             <div class="columna">
-            <h3 class="underline">Que pelis son las que mas me gustaron?</h3>
+            <h3 class="title">CURSOS</h3>
             <ol class="bold">
                 <li>Todas las peliculas de Marvel</li>
                 <li>Alita</li>
@@ -104,7 +109,7 @@
 
         <div class="centro">
             <div class="columna">
-            <h3 class="underline">Perfil</h3>
+            <h3 class="title">Perfil</h3>
             <p class="bold">Soy Tec. en Hemoterapia y estoy estudiando Ing. en Sistemas como segunda carrera</p>
             <p class="bold">Me gusta mucho todo lo relaciona con la informatica; y este año decidi anotarme en <br> 
             en una diplomatura de desarrollo web para extender mis conocimientos</p>
