--- a/modulo3tarea1/contacto.html
+++ b/modulo3tarea1/contacto.html
@@ -30,10 +30,37 @@
         </ul>
     </nav>
     <main class="holder">
-        <div class="homeimg">
-            <img src="img/homeimg.png" alt="Imagen inicial">
+        <div class="columna left">
+            <h2 class="decorado">Contacto Rapido</h2>
+            <form action="" method="" class="formulario">
+                <p>
+                    <label for="">Nombre</label>
+                    <input type="text">
+                </p>
+                <p>
+                    <label for="">Email</label>
+                    <input type="email">
+                </p>
+                <p>
+                    <label for="">Telefono</label>
+                    <input type="text">
+                </p>
+                <p>
+                    <label for="comentario">Comentario</label>
+                    <textarea id="comentario"></textarea>
+                </p>
+                <p class="acciones"><input type="submit" value="Enviar"></p>
+            </form>
         </div>
-
+        <div class="columna right">
+            <h2 class="decorado">Otras vias de contacto</h2>
+            <p>Tambien sepueden comunicar con nosotros:</p>
+            <ul>
+                <li>Telefono: 11-2400-****</li>
+                <li>Email: eze*****@gmail.com</li>
+                <li>Instagram:</li>
+            </ul>
+        </div>
     </main>
     <footer>
         <p>Diseñado por Ezequiel Pinto - &copy;2022</p>
